# fastapi-opinionated-starter

./: README.md  main.py  pyproject.toml
.fastapi_opinionated/: enabled_plugins.py
app/domains/class-based/controllers/: users.py
app/domains/functional-based/controllers/: users.py
app/domains/functional-based/controllers/nested/: nested.py
app/domains/functional_based/controllers/: users.py
app/domains/functional_based/middlewares/: auth.py  hello.py
app/domains/functional_based/states/: auth.py
app/domains/media/controllers/: controller.py
app/domains/user/: controller.py
app/domains/users/controllers/: get_user.py
