[project]
name = "fastapi-opinionated-starter"
version = "0.1.0"
description = ""
authors = [
    {name = "Azzarnuji",email = "azzarnuzy93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-opinionated-core (>=0.1.2,<0.2.0)",
    "fastapi-opinionated-socket (>=0.1.0,<0.2.0)",
    "fastapi-opinionated-eventbus (>=0.1.1,<0.2.0)",
]


[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
